# client-sdk-python

./: .flake8  .gitignore  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Makefile  PYPIREADME.md  README.md  README.template.md  mypy.ini  prepare_local_env.sh  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/actions/linters/: action.yaml  action.yml
.github/workflows/: cd.yml  ci.yml  codeql.yml  manual_release.yml  momento-local-tests.yml  on-pull-request-mvi.yml  on-pull-request.yml  on-push-to-main-branch.yml  on-push-to-release-branch.yml  pull_request.yml  pull_request_and_push.yml  push_request.yml
artifactory_setup/: jfrog_setup.sh
examples/: .gitignore  Makefile  Pipfile  README.ja.md  README.md  example.py  example_async.py  example_async_prepy310.py  example_load_gen.py  example_prepy310.py  mypy.ini  observability.py  pyproject.toml  pyproject.toml.real  pyproject.toml.tmp  requirements.txt  updatemomento.sh
examples/config/: prometheus.yml
examples/example_utils/: example_logging.py
examples/lambda/: README.md
examples/lambda/docker/: Dockerfile
examples/lambda/docker/lambda/: aws_requirements.txt  index.py  requirements.txt
examples/lambda/infrastructure/: package-lock.json
examples/lambda/infrastructure/lib/: stack.ts
examples/lambda/zip/: .gitignore  Makefile  index.py  requirements.txt
examples/loadgen/: pyproject.toml
examples/prepy310/: example.py  example_async.py  example_del.py  example_get.py  pyproject.toml  quickstart.py  readme.py  topic_publish.py  topic_publish_async.py  topic_subscribe.py  topic_subscribe_async.py  vector_index.py  vector_index_async.py
examples/py310/: doc-examples-python-apis.py  example.py  example_async.py  example_load_gen.py  order_system.py  patterns.py  pyproject.toml  quickstart.py  readme.py  topic_publish.py  topic_publish_async.py  topic_subscribe.py  topic_subscribe_async.py  vector_index.py  vector_index_async.py
examples/repro5xx/: repro.py  repro_async.py  super_simple_create.py
examples/utils/: instrumentation.py
examples/vector-index/: README.md  example.py
package_index_setup/: pypi_setup.sh
src/momento/: __init__.py  _async_utils.py  _authorization_interceptor.py  _cache_service_errors_converter.py  _client_timeout_interceptor.py  _generic_client_interceptor.py  _header_client_interceptor.py  _momento_endpoint_resolver.py  _momento_logger.py  _scs_control_client.py  _scs_data_client.py  _scs_grpc_manager.py  auth_client.py  auth_client_async.py  cache.py  cache_client.py  cache_client_async.py  cache_operation_responses.py  cache_operation_types.py  errors.py  logs.py  momento.py  momento_signer.py  simple_cache_client.py  simple_cache_client_async.py  topic_client.py  topic_client_async.py  typing.py  vector_index_client.py  vector_index_client_async.py
src/momento/_utilities/: _data_validation.py  _serialization.py
src/momento/aio/: _add_header_client_interceptor.py  _client_timeout_interceptor.py  _retry_interceptor.py  _scs_control_client.py  _scs_data_client.py  _scs_grpc_manager.py  simple_cache_client.py
src/momento/auth/: __init__.py  credential_provider.py  momento_endpoint_resolver.py
src/momento/common_data/: __init__.py
src/momento/config/: __init__.py  auth_configuration.py  auth_configurations.py  configuration.py  configurations.py  topic_configuration.py  topic_configurations.py  vector_index_configuration.py  vector_index_configurations.py
src/momento/errors/: __init__.py  all_errors.py  cache_service_errors_converter.py  error_converter.py  error_details.py  exceptions.py
src/momento/incubating/: README.md  __init__.py  cache_operation_types.py  simple_cache_client.py
src/momento/internal/: codegen.py  services.py
src/momento/requests/: __init__.py  collection_ttl.py  item.py  sort_order.py
src/momento/responses/: __init__.py  mixins.py  response.py
src/momento/retry/: __init__.py  default_eligibility_strategy.py  eligibility_strategy.py  fixed_count_retry_strategy.py  fixed_timeout_retry_strategy.py  retry_strategy.py  retryable_props.py
src/momento/tools/: cached_async.py
src/momento/utilities/: __init__.py  expiration.py  shared_constants.py  shared_sync_asyncio.py
src/momento_sdk/: _cache_name_interceptor.py  _header_client_interceptor.py  _momento_endpoint_resolver.py  authorization_interceptor.py  cache.py  cache_name_interceptor.py  cache_operation_responses.py  cache_service_errors_converter.py  errors.py  generic_client_interceptor.py  header_client_interceptor.py  momento.py  momento_endpoint_resolver.py
tests/: asserts.py  conftest.py  test_cached_async.py  test_momento.py  test_momento_async.py  test_momento_signer.py  utils.py
tests/incubating/: test_dictionary.py  test_dictionary_async.py  test_exists.py  test_exists_async.py  test_momento.py  test_momento_async.py
tests/momento/aio/: client_interceptor_test.py
tests/momento/auth/: test_credential_provider.py
tests/momento/auth_client/: test_auth_client.py  test_auth_client_async.py  test_permissions.py
tests/momento/cache_client/: shared_behaviors.py  shared_behaviors_async.py  test_cache_api_key_v2.py  test_cache_api_key_v2_async.py  test_control.py  test_control_async.py  test_dictionary.py  test_dictionary_async.py  test_init.py  test_init_async.py  test_list.py  test_list_async.py  test_scalar.py  test_scalar_async.py  test_set.py  test_set_async.py  test_sorted_set.py  test_sorted_set_async.py  test_sorted_set_simple.py  test_sorted_set_simple_async.py
tests/momento/config/: test_config.py  test_vector_index_config.py
tests/momento/internal/: test_codegen.py  test_credential_provider.py
tests/momento/local/: momento_error_code_metadata.py  momento_local_async_middleware.py  momento_local_metrics_collector.py  momento_local_middleware.py  momento_local_middleware_args.py  momento_rpc_method.py  test_fixed_count_retry_strategy.py  test_fixed_count_retry_strategy_async.py  test_topic_subscribe.py  (+1 more)
tests/scripts/: sync_from_async.sh
(+224 files in other folders)
