[metadata]
name = momento

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    momento-wire-types==0.8.0
    build
    setuptools
    pyjwt
    grpcio

[options.packages.find]
where = src

[options.extras_require]
mypy =
    mypy==0.931

black =
    black==22.1.0
