[metadata]
name = momento
description = SDK for Momento
author = Momento
license= Apache License 2.0
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    momento-wire-types==0.8.1
    build
    setuptools
    pyjwt
    grpcio
    click==8.0.4

[options.packages.find]
where = src

[options.extras_require]
mypy =
    mypy==0.931

black =
    black==22.1.0
