[tool.poetry]
name = "examples"
version = "0.1.0"
description = "Momento Python SDK Examples for Python"
authors = ["Momento <hello@momentohq.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.7,<3.13"

momento = "1.28.0"
colorlog = "6.7.0"
hdrhistogram = "^0.10.1"
setuptools = [
    {version = "^68.0.0", python = ">=3.7,<3.8"},
    {version = "^70.0.0", python = ">=3.8,<3.13"}
]

[tool.poetry.group.lint.dependencies]
mypy = "^0.971"
ruff = "^0.1.6"

[tool.mypy]
[[tool.mypy.overrides]]
module = ["momento.*", "", "example_utils.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
fix = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
