[tool.poetry]
name = "examples-py310"
version = "0.1.0"
description = "Momento Python SDK Examples for Python >= 3.10"
authors = ["Momento <hello@momentohq.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

momento = "0.19.0"
colorlog = "6.7.0"

[tool.poetry.group.lint.dependencies]
flake8 = "6.0.0"
mypy = "0.991"

[tool.poetry.group.format.dependencies]
black = "22.12.0"
isort = "5.12.0"


[tool.mypy]
[[tool.mypy.overrides]]
module = ["momento.*", "", "example_utils.*"]
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ["py310"]
include = "\\.pyi?$"
exclude = """
/(
  \\.mypy_cache
  | \\.pytest_cache
  | \\.venv
  | dist
)
"""

[tool.isort]
profile = "black"
src_paths = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
